# tracer

./: .gitignore
src/: CMakeLists.txt  TracerConfig.h.in  main.cpp
src/geometry/: CMakeLists.txt  geometry.h  plane.cpp  plane.h  pointlight.cpp  pointlight.h  sphere.cpp  sphere.h
src/math/: CMakeLists.txt  ray.h  vector3.cpp  vector3.h
src/utils/: CMakeLists.txt  sceneloader.cpp  sceneloader.h
